# SmtpClient-for-Qt

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
src/: CMakeLists.txt  emailaddress.cpp  emailaddress.h  mimeattachment.cpp  mimefile.cpp  mimemessage.cpp  mimemessage.h  mimemultipart.cpp  mimepart.cpp  smtpclient.cpp  smtpclient.h
